--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{:lang => "en-GB"}
   %head
     %title jerseypropertyservices.com
-    =stylesheet_link_tag 'bootstrap', 'bootstrap-theme'
-    =javascript_include_tag 'bootstrap.min', 'jquery', 'jquery-ujs'
+    =stylesheet_link_tag '/assets/application'
+    =javascript_include_tag '/assets/application'
   %body
     = yield
