--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,4 +5,18 @@
     =stylesheet_link_tag '/assets/application'
     =javascript_include_tag '/assets/application'
   %body
-    = yield
+  .container
+    .row
+      .span12.offset3
+        %span#header jerseypropertyservices.com
+      .row
+        %nav#navigation
+          .span2.offset4
+            = link_to 'Home', url_for(:page, :home)
+          .span2
+            = link_to 'About', url_for(:page, :about)
+          .span2
+            = link_to 'Contact', url_for(:page, :contact)
+      .row
+        .span9.offset3.site
+          = yield
