--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,16 +1,17 @@
 %h2 Edit your profile
-= form_for(@user, "/users/#{@user.id}") do |f| # put, NOT post
-  = f.label :name
-  = f.text_field :name
-  = error_message_on @user, :name, class: "text-error", prepend: 'The name '
-  = f.label :email
-  = f.text_field :email
-  = error_message_on @user, :email, :class => "text-error", prepend: 'The email '
-  = f.label :password
-  = f.password_field :password
-  = error_message_on @user, :password, class: "text-error", prepend: 'The password '
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation
-  = error_message_on @user, :password_confirmation, class: "text-error"
-  %p
-    = f.submit 'Save changes', class: "btn btn-large btn-primary"
+= form_for(@user, "/users/#{@user.id}", method: :put) do |f| # put, NOT post
+  .form-group.has-warning
+    = f.label :name
+    = f.text_field :name
+    = error_message_on @user, :name, class: "form-control", prepend: 'The name '
+    = f.label :email
+    = f.text_field :email
+    = error_message_on @user, :email, class: "form-control", prepend: 'The email '
+    = f.label :password
+    = f.password_field :password
+    = error_message_on @user, :password, class: "form-control", prepend: 'The password '
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
+    = error_message_on @user, :password_confirmation, class: "form-control"
+    %p
+      = f.submit 'Save changes', class: "btn btn-large btn-primary"
