--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,16 +20,19 @@
       .row
         %nav#navigation
           .span2.offset4
-            = link_to 'Home', url_for(:page, :home)
+            = link_to 'Home', url(:page, :home)
           .span2
-            = link_to 'About', url_for(:page, :about)
+            = link_to 'About', url(:page, :about)
           .span2
-            = link_to 'Contact', url_for(:page, :contact)
+            = link_to 'Contact', url(:page, :contact)
           - if signed_in?
-            = link_to 'Logout', url_for(:sessions, :destroy)
-          - else
             .span2
-              = link_to 'Login', url_for(:sessions, :new)
+              = link_to 'Logout', url(:sessions, :destroy)
+            .span2
+              = link_to 'Edit Profile', url(:users, :edit, id: session[:current_user])
+          - else
+            .span3
+              = link_to 'Login', url(:sessions, :new)
       .row
         .span9.offset3.site
           = yield
