Rename users new action to "/register", move register button to nav bar. Remove validation on conf/code, remove test

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,6 +33,8 @@
           - else
             .span3
               = link_to 'Login', url(:sessions, :new)
+            .span3
+              = link_to 'Register', url(:users, :new)
       .row
         .span9.offset3.site
           = yield
