--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,24 @@
 %html{:lang => "en-GB"}
   %head
     %title jerseypropertyservices.com
+    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     =stylesheet_link_tag '/assets/application'
     =javascript_include_tag '/assets/application'
+    =javascript_include_tag 'https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&s=1'
+
+    :javascript
+      function GetMap()
+      {
+        var mapOptions = {
+          credentials:'AutjcX00ethCZF2CQURexruteEwuFxvWJ6BVywEvyDv5BIaOO3vfhrH59O_rnLFd',
+          center: new Microsoft.Maps.Location(49.21042016382462, -2.1445659365234615),
+          zoom: 12,
+          mapTypeId: Microsoft.Maps.MapTypeId.aerial
+        };
+        var map = new Microsoft.Maps.Map(document.getElementById('mapDiv'), mapOptions);
+      }
+
+
   %body
   .container
     = if flash[:notice]
