--- a/app/views/planning_app/map.html.haml
+++ b/app/views/planning_app/map.html.haml
@@ -1,2 +1,2 @@
 %body{:onload => "GetMap();"}
-  #mapDiv{style: "position:absolute; width:400px; height:400px;"}
+  #mapDiv{style: "position:relative; width:1300px; height:700px;"}
