--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,9 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     =stylesheet_link_tag '/assets/application'
     =javascript_include_tag '/assets/application'
+    =stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.css'
+    =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.js'
+
     =javascript_include_tag 'https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&s=1'
 
     :javascript
@@ -19,38 +22,37 @@
         var map = new Microsoft.Maps.Map(document.getElementById('mapDiv'), mapOptions);
       }
 
-
   %body
-  .container
-    = if flash[:notice]
-      #flash.row
-        .span9.offset3.alert.alert-success
-          = flash[:notice] # use jquery
-        :javascript
-          $(function(){
-              $("#flash").fadeOut(2000);
-          });
-    .row
-      .span12.offset3
-        %span#header jerseypropertyservices.com
+    .container
+      = if flash[:notice]
+        #flash.row
+          .span9.offset3.alert.alert-success
+            = flash[:notice] # use jquery
+          :javascript
+            $(function(){
+                $("#flash").fadeOut(2000);
+            });
       .row
-        %nav#navigation
-          .span2.offset4
-            = link_to 'Home', url(:page, :home)
-          .span2
-            = link_to 'About', url(:page, :about)
-          .span2
-            = link_to 'Contact', url(:page, :contact)
-          - if signed_in?
+        .span12.offset3
+          %span#header jerseypropertyservices.com
+        .row
+          %nav#navigation
+            .span2.offset4
+              = link_to 'Home', url(:page, :home)
             .span2
-              = link_to 'Logout', url(:sessions, :destroy)
+              = link_to 'About', url(:page, :about)
             .span2
-              = link_to 'Edit Profile', url(:users, :edit, id: session[:current_user])
-          - else
-            .span3
-              = link_to 'Login', url(:sessions, :new)
-            .span3
-              = link_to 'Register', url(:users, :new)
-      .row
-        .span9.offset3.site
-          = yield
+              = link_to 'Contact', url(:page, :contact)
+            - if signed_in?
+              .span2
+                = link_to 'Logout', url(:sessions, :destroy)
+              .span2
+                = link_to 'Edit Profile', url(:users, :edit, id: session[:current_user])
+            - else
+              .span3
+                = link_to 'Login', url(:sessions, :new)
+              .span3
+                = link_to 'Register', url(:users, :new)
+        .row
+          .span9.offset3.site
+            = yield
