Add columns to planning_app/index view, change AppRefsScraper to lookup latest app_number from db. Change tests and change rake task

--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-condensed{"data-toggle" => "table", "data-sort-name" =>"Ref", "data-sort-order" =>"desc"}
+%table.table.table-striped.table-condensed{"data-toggle" => "table", "data-sort-name" =>"Order", "data-sort-order" =>"desc"}
   %thead
     %tr
       - @titles.each do |col|
