--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-condensed{"data-toggle" => "table", "data-sort-name" =>"Order", "data-sort-order" =>"desc"}
+%table.table.table-striped.table-condensed{"data-toggle" => "table"}
   %thead
     %tr
       - @titles[1..-1].each do |col| # [1..-1] hides :order column
