--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -1,4 +1,5 @@
-%table.table.table-striped.table-condensed{"data-toggle" => "table"}
+#filter-bar
+%table.tbl.table.table-striped.table-condensed{"data-toggle" => "table", "data-toolbar" => "#filter-bar", "data-show-toggle" => "true", "data-show-columns" => "true", "data-show-filter" => "true"}
   %thead
     %tr
       - @titles[1..-1].each do |col| # [1..-1] hides :order column
