--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,19 +14,10 @@
     =stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.css'
     =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.js'
 
-    =javascript_include_tag 'https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&s=1'
+    =stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'
 
-    :javascript
-      function GetMap()
-      {
-        var mapOptions = {
-          credentials:'AutjcX00ethCZF2CQURexruteEwuFxvWJ6BVywEvyDv5BIaOO3vfhrH59O_rnLFd',
-          center: new Microsoft.Maps.Location(49.21042016382462, -2.1445659365234615),
-          zoom: 13,
-          mapTypeId: Microsoft.Maps.MapTypeId.aerial
-        };
-        var map = new Microsoft.Maps.Map(document.getElementById('mapDiv'), mapOptions);
-      }
+    =stylesheet_link_tag 'http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap-editable/css/bootstrap-editable.css'
+    =javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap-editable/js/bootstrap-editable.min.js'
 
   %body
     .container
