--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -1,5 +1,4 @@
-#filter-bar
-%table.tbl.table.table-striped.table-condensed{"data-toggle" => "table", "data-toolbar" => "#filter-bar", "data-show-toggle" => "true", "data-show-columns" => "true", "data-show-filter" => "true"}
+%table.table.table-striped.table-condensed{"data-toggle" => "table"}
   %thead
     %tr
       - @titles[1..-1].each do |col| # [1..-1] hides :order column
@@ -8,3 +7,9 @@
     %tr
       - row[1..-1].each do |data|
         %td= data
+
+:javascript
+  $(function() {
+    alert('done');
+    // $('.table').filterable();
+  });
