--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,8 @@
   %head
     %title jerseypropertyservices.com
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
-    =stylesheet_link_tag '/assets/application'
-    =javascript_include_tag '/assets/application'
+    =stylesheet_link_tag 'application'
+    =javascript_include_tag 'application'
 
     -# =stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css'
     -# =stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css'
