--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,7 @@
  * ...
  *
  *= require_self
- *= require bootstrap/dist/css/bootstrap
+ *= require bootstrap/dist/css/bootstrap.min
  *= require bootstrap-table/dist/bootstrap-table.min
  *= require site
 */
