--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,12 +6,12 @@
     =stylesheet_link_tag 'application'
     =javascript_include_tag 'application'
 
-    -# =stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css'
-    -# =stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css'
-    -# =stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.css'
+    =stylesheet_link_tag '//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'
+    =stylesheet_link_tag '//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css'
+    =stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.css'
 
-    -# =javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js'
-    -# =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.js'
+    =javascript_include_tag '//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'
+    =javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.js'
 
   %body
     .container
