Add js & css files for table filter panel & inlucde in planning_app/index. Filters just page showing - to fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,5 +2,6 @@
  * This is a manifest file that'll automatically include all the stylesheets ...
  * ...
  *= require_self
+ *= require filterable
  *= require site
 */
