--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     =javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.js'
 
   %body
-    .container
+    .container-fluid
       - if flash[:notice]
         #flash.row
           .span9.offset3.alert.alert-success
@@ -25,26 +25,7 @@
                 $("#flash").fadeOut(2000);
             });
       .row
-        .span12.offset3
-          %span#header jerseypropertyservices.com
-        .row
-          %nav#navigation
-            .span2.offset4
-              = link_to 'Home', url(:page, :home)
-            .span2
-              = link_to 'About', url(:page, :about)
-            .span2
-              = link_to 'Contact', url(:page, :contact)
-            - if signed_in?
-              .span2
-                = link_to 'Logout', url(:sessions, :destroy)
-              .span2
-                = link_to 'Edit Profile', url(:users, :edit, id: session[:current_user])
-            - else
-              .span3
-                = link_to 'Login', url(:sessions, :new)
-              .span3
-                = link_to 'Register', url(:users, :new)
-        .row
-          .span9.offset3.site
-            = yield
+        =partial "layouts/navigation"
+      .row
+        .span9.offset3.site
+          = yield
