Nuke table-panel-filter, replace with bs-styled jq plugin: DataTables

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,11 @@
     =stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.css'
     =javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.5.0/bootstrap-table.min.js'
 
+    =stylesheet_link_tag '//cdn.datatables.net/1.10.4/css/jquery.dataTables.css'
+    =stylesheet_link_tag '//cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.css'
+    =javascript_include_tag '//cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js'
+    =javascript_include_tag '//cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.js'
+
   %body
     .container-fluid
       - if flash[:notice]
