--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -11,32 +11,9 @@
         - row[1..-1].each do |data|
           %td= data.class == Date ? data.strftime("%d/%m/%y") : data
 
-:javascript
-  $(function() {
-    $('#tbl').dataTable({
-      "order": [], // disable INITIAL sort order
-      "sDom": 'lrtip' // remove 'filtering element' - see: https://datatables.net/reference/option/dom
-    });
-  });
+=javascript_include_tag 'apps_table'
 
 :javascript
   $(function() {
-    // Setup - add a text input to each footer cell
-    $('#tbl tfoot th').each( function () {
-      var title = $('#tbl thead th').eq( $(this).index() ).text();
-       $(this).html( '<input type="text" placeholder="'+title+'" />' );
-    });
-
-    // DataTable
-    var table = $('#tbl').DataTable();
-
-    // Apply the search
-    table.columns().eq( 0 ).each( function ( colIdx ) {
-      $( 'input', table.column( colIdx ).footer() ).on( 'keyup change', function () {
-        table
-          .column( colIdx )
-          .search( this.value )
-          .draw();
-      });
-    });
+    drawTable();
   });
