--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -1,3 +1,4 @@
+#table-controls
 %table#tbl.loadable.table.table-striped.table-condensed{"data-toggle" => "table"}
   %thead
     - @titles.each do |col|
