Replace custom callback with DT option

--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -9,7 +9,5 @@
 
 :javascript
   $.get( "index.json", function( data ) {
-      drawTable( data, function() {
-        $('#tbl').removeClass('loadable');
-      });
+      drawTable( data );
     });
