Add officer to table, add js & css & image for DT scroller

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,5 +8,6 @@
  *= require jquery.dataTables.css
  *= require dataTables.bootstrap.css
  *= require dataTables.colVis.css
+ *= require dataTables.scroller.css
  *= require site
 */
