--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,17 +6,16 @@
     =stylesheet_link_tag 'application'
     =javascript_include_tag 'application'
   %body
-    .container-fluid
-      - if flash[:notice]
-        #flash.row
-          .span9.offset3.alert.alert-success
-            = flash[:notice] # uses jquery
-          :javascript
-            $(function(){
-              $("#flash").fadeOut(5000);
-            });
-      .row
-        =partial "layouts/navigation"
-      .row
-        .span9.offset3.site
-          = yield
+    -# .container-fluid
+      -# - if flash[:notice]
+      -#   #flash.row
+      -#     .span9.offset3.alert.alert-success
+      -#       = flash[:notice] # uses jquery
+      -#     :javascript
+      -#       $(function(){
+      -#         $("#flash").fadeOut(5000);
+      -#       });
+      -# .row
+    =partial "layouts/navigation"
+    .container-fluid.site
+      = yield
