--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -36,9 +36,9 @@ tfoot input {
   box-sizing: border-box;
 }
 
-.loadable {
+/*.loadable {
   display: none;
-}
+}*/
 
 td div {
   height: 68px; /* magic number to allow 4 text lines at 12pt font with 2px padding and line-spacing of 1.42857143! */
