--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -1,5 +1,6 @@
+.obscure-while-loading
 #table-controls
-%table#tbl.loadable.table.table-striped.table-condensed{"data-toggle" => "table"}
+%table#tbl.table.table-striped.table-condensed{"data-toggle" => "table"}
   %thead
     - @titles.each do |col|
       %th{"data-field" => col} =col
