Add DT table tools, select/deselect all buttons. Reformat rake task

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,6 @@
  *= require dataTables.bootstrap.css
  *= require dataTables.colVis.css
  *= require dataTables.scroller.css
+ *= require dataTables.tableTools.css
  *= require site
 */
