--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,8 @@
 %html{:lang => "en-GB"}
   %head
     %title jerseypropertyservices.com
-    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
+    %meta{content: "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
+    =csrf_meta_tags
     =stylesheet_link_tag 'application'
     =javascript_include_tag 'application'
   %body
