Add gem; gon. Move map javascript to own file, add "view on map" button and plot selected apps on map

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     =csrf_meta_tags
     =stylesheet_link_tag 'application'
     =javascript_include_tag 'application'
+    =javascript_include_tag 'https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&s=1'
+    =include_gon.html_safe
   %body
     -# .container-fluid
       -# - if flash[:notice]
