Migrations 7 & 8, populate pins & infoboxes with letters, colours, descriptions etc - lots of DB calls..

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,16 +9,15 @@
     =javascript_include_tag 'https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&s=1'
     =include_gon.html_safe
   %body
-    -# .container-fluid
-      -# - if flash[:notice]
-      -#   #flash.row
-      -#     .span9.offset3.alert.alert-success
-      -#       = flash[:notice] # uses jquery
-      -#     :javascript
-      -#       $(function(){
-      -#         $("#flash").fadeOut(5000);
-      -#       });
-      -# .row
     =partial "layouts/navigation"
+    .container-fluid
+      - if flash[:notice]
+        #flash.row
+          .span9.offset3.alert.alert-success
+            = flash[:notice] # uses jquery
+          :javascript
+            $(function(){
+              $("#flash").fadeOut(5000);
+            });
     .container-fluid.site
       = yield
