--- a/app/views/planning_app/map.html.haml
+++ b/app/views/planning_app/map.html.haml
@@ -2,5 +2,5 @@
 
 :javascript
   $(function() {
-    GetMap(gon.locations, gon.refs, gon.descrips);
+    GetMap(gon.locations, gon.colours, gon.letters, gon.refs, gon.descrips);
   });
