Add copyright notice

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -28,6 +28,8 @@
           %li
             = link_to 'Register', url(:users, :new)
       %ul.nav.navbar-nav.navbar-right
+        %li.navbar-brand.copyright
+          &copy; 2015 jerseypropertyservices.com
         -# %form.navbar-form.navbar-left{:role => "search"}
         -#   .form-group
         -#     %input.form-control{:placeholder => "Search", :type => "text"}
