Add Bing maps DrawingToolsModule

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,5 +10,6 @@
  *= require dataTables.colVis.css
  *= require dataTables.scroller.css
  *= require dataTables.tableTools.css
+ *= require DrawingToolsModule.css
  *= require site
 */
