Big JS refactor, also move controller logic to helper

--- a/app/views/planning_app/map.html.haml
+++ b/app/views/planning_app/map.html.haml
@@ -4,5 +4,5 @@
 
 :javascript
   $(function() {
-    GetMap(gon.locations, gon.colours, gon.letters, gon.refs, gon.descrips);
+    GetMap(gon.data);
   });
