Map now plots apps inside any shape drawn

--- a/app/views/planning_app/map.html.haml
+++ b/app/views/planning_app/map.html.haml
@@ -1,6 +1,6 @@
 .map_container
   #mapDiv.map_canvas
-  #toolbarContainer{"style" => "float:right;margin-right: 100px"}
+  #toolbarContainer{"style" => "float:right"}
 
 :javascript
   $(function() {
