--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,3 +21,9 @@
             });
     .container-fluid.site
       = yield
+  %ul.nav.navbar-nav.navbar-fixed-bottom.navbar-right
+    %li
+      %p.copyright &copy; 2015 jerseypropertyservices.com
+
+  -# %nav.navbar-nav.navbar-right.navbar-fixed-bottom
+  -#   %p.copyright &copy; 2015 jerseypropertyservices.com
