--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -17,19 +17,22 @@
           = link_to 'Contact', url(:page, :contact)
         %li
           = link_to 'About', url(:page, :about)
+        %li
+          = link_to 'Applications', url(:planning_app, :index)
+        %li
+          = link_to 'Map', url(:planning_app, :map)
+      %ul.nav.navbar-nav.navbar-right
+        %li
         - if signed_in?
           %li
-            = link_to 'Logout', url(:sessions, :destroy)
-          %li
             = link_to 'Edit Profile', url(:users, :edit, id: session[:current_user])
+          %li
+            = link_to 'Logout', url(:sessions, :destroy)
         - else
           %li
-            = link_to 'Login', url(:sessions, :new)
-          %li
             = link_to 'Register', url(:users, :new)
-      %ul.nav.navbar-nav.navbar-right
-        %li.navbar-brand.copyright
-          &copy; 2015 jerseypropertyservices.com
+          %li
+            = link_to 'Login', url(:sessions, :new)
         -# %form.navbar-form.navbar-left{:role => "search"}
         -#   .form-group
         -#     %input.form-control{:placeholder => "Search", :type => "text"}
