--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -96,6 +96,7 @@ td div.long-text {
 }
 
 .infobox{
+  z-index: 999; /* ensure always on top */
   position:relative;
   background-color:white;
   border:1px solid rgb(136, 136, 136);
