--- a/app/views/home.html.haml
+++ b/app/views/home.html.haml
@@ -4,18 +4,13 @@ This site is dedicated to industry professionals and others interested in the pl
 
 %h1 Services available
 %ul
-  %li Our database contains all planning applications published by the Jersey Planning Department and is fully searchable in a simple tabular format. Searches may include Applicant, Agent, policy Constraint and other fields not searchable via the
-  = link_to 'Planning register', 'https://www.mygov.je/planning/pages/planning.aspx', target: :_blank
+  %li Our database contains all planning applications published by the Jersey Planning Department and is fully searchable in a simple tabular format. Searches may include Applicant, Agent, policy Constraint and other fields not searchable via the <a href='https://www.mygov.je/planning/pages/planning.aspx', target='_blank'>Planning register</a>
   %li We also provide the ability to retrieve planning history* for one or more area(s) of interest by outlining area(s) on a map. This offers a very efficient way to access the planning history of a large or complex site, as searchig by address, for example, may not always yield all results expected
   %li Applications are linked to all Planning Application Panel and Ministerial Meetings at which they were/will be discussed. This facilitates very quick access to the detail of contested cases, particularly applications which have been the subject of several Panel or Minsterial meetings
 
-* All applications since 2001
-** Meetings since 2014 currently
+%p * All applications since 2001
+%p ** Meetings since 2014 currently
 
 %h1 Pricing
 %ul
-  %li Membership is available on a subsription basis to
-  = link_to 'registered users', '/register'
-  Currently we offer annually memberships at £600. We may consider shorter-term memberships, if there is a demand. Please use the
-  = link_to 'contact form', '/contact'
-  to provide feedback, if this may interest you
+  %li Membership is available on a subsription basis to <a href='/register'>Registered users</a>. Currently we offer annually memberships at £512.50. We may consider shorter-term memberships, if there is a demand. Please use the <a href='/contact'>Contact form</a> to provide feedback, if this may interest you
