--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,17 +1,23 @@
-%h1 Registration
-= form_for(@user, '/users/create') do |f|
-  .form-group.has-warning
-    = f.label :name
-    = f.text_field :name
-    = error_message_on @user, :name, class: "form-control", :prepend => "The name "
-    = f.label :email
-    = f.text_field :email
-    = error_message_on @user, :email, class: "form-control", :prepend => "The email "
-    = f.label :password
-    = f.password_field :password
-    = error_message_on @user, :password, class: "form-control", :prepend => "The password "
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
-    = error_message_on @user, :password_confirmation, class: "form-control"
-    %p
-      = submit_tag "Register", :class => "btn btn-primary"
+.container-fluid
+  .col-md-4.col-md-offset-4.column
+    %h1 Registration
+    = form_for(@user, '/users/create', :class => 'form', :role => 'form') do |f|
+      .form-group.has-warning
+        = f.label :name, :class => 'control-label'
+        = f.text_field :name, :class => 'form-control'
+        = error_message_on @user, :name, class: "form-control", :prepend => "The name "
+        %br
+        = f.label :email, :class => 'control-label'
+        = f.text_field :email, :class => 'form-control'
+        = error_message_on @user, :email, class: "form-control", :prepend => "The email "
+        %br
+        = f.label :password, :class => 'control-label'
+        = f.password_field :password, :class => 'form-control'
+        = error_message_on @user, :password, class: "form-control", :prepend => "The password "
+        %br
+        = f.label :password_confirmation, :class => 'control-label'
+        = f.password_field :password_confirmation, :class => 'form-control'
+        = error_message_on @user, :password_confirmation, class: "form-control"
+        %br
+        %p
+          = submit_tag "Register", :class => "btn btn-primary"
