--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -40,6 +40,25 @@ h1 {
   /*line-height: 1.8em;*/
 }
 
+.form {
+  padding: 15px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+}
+
+.form label {
+  margin-top: 18px;
+}
+
+.form .btn {
+  margin-top: 18px;
+}
+
+.form .checkbox-inline {
+  margin-bottom: 18px;
+}
+
 .map_container{
   position: relative;
   width: 100%;
