--- a/app/views/users/confirm.html.haml
+++ b/app/views/users/confirm.html.haml
@@ -1,1 +1,4 @@
-Congratulations, your registration has been confirmed!
+Congratulations, your registration has been confirmed. You may now use the following link to access the site's services:-
+%br
+%p
+  = link_to('subscribe', "/users/#{@user.id}/subscribe")
