--- a/app/views/users/subscribe.html.haml
+++ b/app/views/users/subscribe.html.haml
@@ -2,13 +2,13 @@
   .col-md-4.col-md-offset-4.column
     %h1 Subscribe
     = form_tag '/charge', :class => 'form', :role => 'form' do
-      %article
-        %label{:class => "amount"}
-          %span Amount: $5.00
-
-      = javascript_include_tag "https://checkout.stripe.com/v2/checkout.js",
-        :class => "stripe-button",
-        :"data-key" => "crap",
-        :"data-description" => "30-day free trial",
-        :"data-amount" => "500",
-        :"data-image" => "/app-128x128.png"
+      %span
+        = label_tag :annual_plan, :class => 'control-label'
+        £512.50
+      %p
+        = javascript_include_tag "https://checkout.stripe.com/v2/checkout.js",
+          :class => "stripe-button",
+          :"data-key" => "crap",
+          :"data-description" => "30-day free trial",
+          :"data-amount" => "500",
+          :"data-image" => "/app-128x128.png"
