--- a/app/views/subscribe.html.haml
+++ b/app/views/subscribe.html.haml
@@ -1,7 +1,7 @@
 .container-fluid
   .col-md-4.col-md-offset-4.column
     %h1 Subscribe
-    = form_tag '/charge', :class => 'form', :role => 'form' do
+    = form_tag '/charge', method: :post, class: :form, role: :form do
       %span
         = label_tag :annual_subscription_cost, :class => 'control-label'
         £512.50
