--- a/app/views/users/payment.html.haml
+++ b/app/views/users/payment.html.haml
@@ -1,3 +1,3 @@
-%h1 Thanks, you have successfully subscribed.
+%h1 You have successfully subscribed.
 
 You can view applications in tabluar format via the <a href='/applications'>Applications</a> menu, or use the map via the <a href='/map'>Map</a> menu.
