Refactor tests, add stripe_helper to DRY subscription amount in views & controller

--- a/app/views/users/payment.html.haml
+++ b/app/views/users/payment.html.haml
@@ -1,3 +1,1 @@
-%h1 You have successfully subscribed.
-
-You can view applications in tabluar format via the <a href='/applications'>Applications</a> menu, or use the map via the <a href='/map'>Map</a> menu.
+You may now <a href='/login'>log in</a> to view applications in tabluar format via the <a href='/applications'>Applications</a> menu, or use the map via the <a href='/map'>Map</a> menu.
